--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,15 @@ body {
   transform: translateX(-50%) translateY(-50%);
 }
 
+
+#bgsite {
+  background-color: pink;
+}
+
 a {
   color: #00B7FF;
+}
+
+#bgsite {
+  color: rgb(2, 243, 2);
 }
